Curso SRE Alura - Modulo 003 - Aula 02 Subindo a stack com API e Prometheus